# bootstrap-inject

./: README.md  pyproject.toml  run.py
bootstrap_inject/: __init__.py  ceiling.py  core.py  dspy_teleprompter.py  lm.py  tasks.py
docs/: dspy.md
examples/: dspy_integration.py
tests/: test_dspy_adapter_offline.py  test_offline.py
