[project]
name = "bootstrap-inject"
version = "0.1.0"
description = "Zero-search few-shot demo injection for small LMs — bootstrap correct traces, inject k at random, no selection search. The verified bet-0002 operator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dspy = ["dspy-ai>=2.5"]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bootstrap_inject"]
